@@ -1,6 +1,7 @@
 package com.borsaistanbul.stockvaluation.business.valuation;
 
-import com.borsaistanbul.stockvaluation.client.PriceInfoService;
+import com.borsaistanbul.stockvaluation.client.GetCurrentPriceResponse;
+import com.borsaistanbul.stockvaluation.client.TechnicalDataClient;
 import com.borsaistanbul.stockvaluation.dto.entity.ValuationInfo;
 import com.borsaistanbul.stockvaluation.dto.model.ResponseData;
 import com.borsaistanbul.stockvaluation.repository.CompanyInfoRepository;
@@ -9,63 +10,45 @@ import lombok.SneakyThrows;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.util.ResourceUtils;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.ResponseEntity;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.InputStream;
 import java.math.BigDecimal;
-import java.net.URI;
-import java.net.URL;
-import java.net.URLConnection;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 class ValuationBusinessImplTest {
 
     @Mock
-    ResourceUtils resourceUtils;
+    private CompanyInfoRepository companyInfoRepository;
+
     @Mock
-    CompanyInfoRepository companyInfoRepository;
-    @Autowired
     ValuationInfoRepository valuationInfoRepository;
-    @Autowired
-    PriceInfoService priceInfoService;
+
+    @Mock
+    TechnicalDataClient technicalDataClient;
+
     ValuationBusinessImpl valuationBusiness;
     String industry;
-    final List<String> tickerList = new ArrayList<>();
+    List<String> tickerList;
     ValuationInfo valuationInfo1;
-    @Mock
-    URI mockUri;
-    @Mock
-    URL mockUrl;
-    @Mock
-    URLConnection urlConnection;
-    @Mock
-    InputStream targetStream;
+    GetCurrentPriceResponse getCurrentPriceResponse;
 
     @BeforeEach
     void init() {
-        companyInfoRepository = mock(CompanyInfoRepository.class);
-        valuationInfoRepository = mock(ValuationInfoRepository.class);
-        priceInfoService = mock(PriceInfoService.class);
-        resourceUtils = mock(ResourceUtils.class);
-        urlConnection = mock(URLConnection.class);
-        mockUri = mock(URI.class);
-        mockUrl = mock(URL.class);
 
-        targetStream = mock(InputStream.class);
-
-
-        valuationBusiness = new ValuationBusinessImpl(companyInfoRepository, valuationInfoRepository, priceInfoService);
+        valuationBusiness = new ValuationBusinessImpl(companyInfoRepository, valuationInfoRepository, technicalDataClient);
         industry = "Otomotiv";
 
+        tickerList = new ArrayList<>();
         tickerList.add("FROTO");
 
         valuationInfo1 = new ValuationInfo();
@@ -77,13 +60,15 @@ class ValuationBusinessImplTest {
         valuationInfo1.setInitialCapital(BigDecimal.TEN);
         valuationInfo1.setAnnualEbitda(BigDecimal.TEN);
         valuationInfo1.setAnnualSales(BigDecimal.TEN);
-        valuationInfo1.setTtmNetProfit(BigDecimal.TEN);
-        valuationInfo1.setPrevTtmNetProfit(new BigDecimal(5));
+        valuationInfo1.setAnnualNetProfit(BigDecimal.TEN);
+        valuationInfo1.setPrevYearNetProfit(new BigDecimal(5));
         valuationInfo1.setNetDebt(BigDecimal.TEN);
         valuationInfo1.setTotalAssets(BigDecimal.TEN);
         valuationInfo1.setLongTermLiabilities(BigDecimal.TEN);
         valuationInfo1.setShortTermLiabilities(BigDecimal.TEN);
 
+        getCurrentPriceResponse = new GetCurrentPriceResponse();
+        getCurrentPriceResponse.setPrice(10.0);
     }
 
     @Test
@@ -92,35 +77,27 @@ class ValuationBusinessImplTest {
         when(companyInfoRepository.findTickerByIndustry(anyString())).thenReturn(tickerList);
         when(valuationInfoRepository.findAllByTicker(anyString())).thenReturn(Optional.of(valuationInfo1));
         when(companyInfoRepository.findCompanyNameByTicker(anyString())).thenReturn("TEST_COMPANY");
-        when(priceInfoService.fetchPriceInfo(anyString())).thenReturn(10.00);
-
+        when(technicalDataClient.getCurrentPrice(anyString())).thenReturn(ResponseEntity.ok(getCurrentPriceResponse));
 
         List<ResponseData> responseDataList = valuationBusiness.business(industry);
 
-        Assertions.assertNotNull(responseDataList.get(0));
+        Assertions.assertNotNull(responseDataList.getFirst());
 
     }
 
-    @Test
     @SneakyThrows
     void businessTestValuationInfoNotFound() {
 
         when(companyInfoRepository.findTickerByIndustry(anyString())).thenReturn(tickerList);
         when(companyInfoRepository.findCompanyNameByTicker(anyString())).thenReturn("TEST_COMPANY");
-        when(priceInfoService.fetchPriceInfo(anyString())).thenReturn(10.00);
+        when(technicalDataClient.getCurrentPrice(anyString())).thenReturn(ResponseEntity.ok(getCurrentPriceResponse));
 
-        File initialFile = new File("src/main/resources/static/unittestreport.xlsx");
-        InputStream targetStream = new FileInputStream(initialFile);
-
-        // TODO -> You have to mock the URL so it shouldn't go to FinTables actually.
-        when(mockUrl.openConnection()).thenReturn(urlConnection);
-        when(urlConnection.getInputStream()).thenReturn(targetStream);
+        // TODO -> You have to mock the URL so it shouldn't actually go to FinTables.
         when(valuationInfoRepository.save(any(ValuationInfo.class))).thenReturn(null);
         when(valuationInfoRepository.findAllByTicker(anyString())).thenReturn(Optional.empty());
 
         List<ResponseData> responseDataList = valuationBusiness.business(industry);
-        Assertions.assertNotNull(responseDataList.get(0));
+        Assertions.assertNotNull(responseDataList.getFirst());
 
     }
-
 }
